==> leandroschwarz/funsapeAvr8Lib/fatFs/mmc_avr_spi.cpp <==
#include "mmc_avr.h"
#define CS_LOW()		spiSlaveDeviceSsLow(&spiSlaveSdCard)
#define CS_HIGH()		spiSlaveDeviceSsHigh(&spiSlaveSdCard)
#define MMC_CD			1	/* Test if card detected.   yes:true, no:false, default:true */
#define MMC_WP			0	/* Test if write protected. yes:true, no:false, default:false */
#define	FCLK_SLOW()		SPCR |=  ((1<<SPR1) | (1<<SPR0))
#define	FCLK_FAST()		SPCR &= ~((1<<SPR1) | (1<<SPR0))

static
BYTE xchg_spi(   /* Returns received data */
        BYTE dat		/* Data to be sent */
)
{
    SPDR = dat;
    loop_until_bit_is_set(SPSR, SPIF);
    return SPDR;
}

static
void rcvr_spi_multi(
        BYTE *p,	/* Data read buffer */
        UINT cnt	/* Size of data block */
)
{
    do {
        SPDR = 0xFF;
        loop_until_bit_is_set(SPSR, SPIF);
        *p++ = SPDR;
        SPDR = 0xFF;
        loop_until_bit_is_set(SPSR, SPIF);
        *p++ = SPDR;
    } while(cnt -= 2);
}

static
void xmit_spi_multi(
        const BYTE *p,	/* Data block to be sent */
        UINT cnt		/* Size of data block */
)
{
    do {
        SPDR = *p++;
        loop_until_bit_is_set(SPSR, SPIF);
        SPDR = *p++;
        loop_until_bit_is_set(SPSR, SPIF);
    } while(cnt -= 2);
}
